# hexapod-simulation

./: .gitignore
hexapod_bringup/: CMakeLists.txt  package.xml
hexapod_bringup/config/: phantomx.rviz  ros_gz_bridge.yaml
hexapod_bringup/launch/: basic_visualization_test_launch.xml  gz_sim_test.launch.py
hexapod_bringup/worlds/: world.sdf
hexapod_description/: CMakeLists.txt  package.xml
hexapod_description/control/: controller_manager.yaml
hexapod_description/models/Warehouse/: model.sdf
hexapod_description/models/phantomx/meshes/stl/: body_coll.stl  connect.stl  thigh_l.stl  tibia_l.stl
hexapod_description/models/phantomx/urdf/: model.config  phantomx.urdf  phantomx.urdf.xacro  phantomx.xacro
ros_gz_example_application/: package.xml
ros_gz_example_description/models/phantomx/urdf/: PhantomX.urdf.xml  phantomx.xacro  phantomx_fixed.urdf  phantomx_urdf.xacro
